# mydoorcamera

./: .gitignore  CLAUDE.md  CNAME  DEPLOY_KEY_TEST.md  README.md  index.html  package.json  tsconfig.json
deploy/: metrics-logger.sh  mydoorcamera-activity.service  mydoorcamera-capture.service  mydoorcamera-metrics.service  mydoorcamera-server.service  mydoorcamera-thin.service  systemd-watchdog.conf
docs/: thinning.md
recorder/: Cargo.toml
recorder/src/: activity.rs  hwcodec.rs  main.rs  storage.rs  thin.rs
scripts/: cacheBust.js  deploy.js  errorOverlay.js  writeBuildVersion.js
src/: activity.ts  activityDetect.ts  activityWorker.ts  annexb.ts  auth.ts  capture.ts  config.ts  control.ts  muxtest.ts  rpc.ts  server.ts  servertest.ts  stats.ts  storage.ts  thin.ts  timezone.ts  words1024.json
web/: api.ts  appState.ts  browser.tsx  format.ts  navigation.ts  player.ts  session.ts  styles.ts
web/helpers/: activityRegions.ts  api.ts  appState.ts  fileApiKey.ts  format.ts  h264.ts  indexBuffer.ts  navigation.ts  playerLog.ts  session.ts  thumbnails.ts  trackbarHelpers.ts  videoHelpers.ts
web/helpers/player/: DayPlayer.ts  LivePlayer.ts  frameCache.ts  gopDecoder.ts  gopSource.ts  prebuffer.ts  renderer.ts  types.ts  webcodecs.d.ts
web/views/: ActivityPanel.tsx  App.tsx  Calendar.tsx  ConnectView.tsx  Controls.tsx  DatePicker.tsx  DayView.tsx  LevelSelector.tsx  LevelsPanel.tsx  Trackbar.tsx  VideoPlayer.tsx
