[package]
name = "recorder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "recorder"
path = "src/main.rs"

[dependencies]
v4l = "0.14"
v4l2-sys-mit = "0.3"
libc = "0.2"
jpeg-decoder = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[profile.release]
opt-level = 3
lto = true
